tetrate/tis1003/e2e/bad-resouces-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: sidecar-null-mode
  namespace: default
spec:
  egress:
  - hosts:
    - "*/*"
  outboundTrafficPolicy:
    mode: null
