tetrate/tis1003/e2e/bad-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: sidecar-empty-policy
  namespace: default
spec:
  egress:
  - hosts:
    - "*/*"
  outboundTrafficPolicy: {}
