tetrate/tis1003/e2e/good-resource-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: sidecar-allow-any-2
  namespace: default
spec:
  egress:
  - hosts:
    - "*/*"
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
