tetrate/tis1003/e2e/good-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: sidecar-allow-any
  namespace: default
spec:
  egress:
  - hosts:
    - "*/*"
  outboundTrafficPolicy:
    mode: ALLOW_ANY
