tetrate/tis1003/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-outbound-traffic-policy
spec:
  validationFailureAction: Enforce
