tetrate/tis1003/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-fips-tls-settings
spec:
  steps:
    - name: apply-rbac-policy
      try:
        - apply:
            file: rbac-policy.yaml


    - name: apply-kyverno-policy
      try:
        - apply:
            file: ../check-for-empty-outboundTrafficPolicy.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: good-resource-2.yaml

    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml

    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource-2.yaml
